Set license to MIT in Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.1"
 edition = "2024"
 readme = "README.md"
 description = "A concurrent, in-memory, in-process, redis-like storage for Rust."
+license = "MIT"
 license-file = "LICENSE"
 repository = "https://github.com/Nekidev/turbostore"
 authors = ["Rafael Bradley"]
